// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > generates a path-param command with a scalar JSON body 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setOfficial
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetOfficialCommand = defineCommand<OpenApiClientServices>({
  name: "set-official",
  description: "Mark a bot as official.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    official: S.Boolean(),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-official",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "official": params.official,
      },
    });
  },
});
",
    "path": "bots/set-official.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetOfficialCommand } from "./bots/set-official.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetOfficialCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > generates a scalar query command 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: listBots
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsListCommand = defineCommand<OpenApiClientServices>({
  name: "list",
  description: "List bots.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    limit: S.Optional(S.Number({ default: 50, jsonType: "integer" })),
    owner: S.Optional(S.String()),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots",
      method: "GET",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      query: {
        "owner": params.owner,
        "limit": params.limit,
      },
    });
  },
});
",
    "path": "bots/list.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsListCommand } from "./bots/list.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsListCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > generates an enum JSON body command 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setImageComprehension
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetImageComprehensionCommand = defineCommand<OpenApiClientServices>({
  name: "set-image-comprehension",
  description: "Set image comprehension mode.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    mode: S.Enum(["off","auto","forced"] as const),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-image-comprehension",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "mode": params.mode,
      },
    });
  },
});
",
    "path": "bots/set-image-comprehension.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetImageComprehensionCommand } from "./bots/set-image-comprehension.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetImageComprehensionCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > generates array body params with a repeatable CLI flag, a JSON variant, and MCP array fidelity 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setConversationStarters
 */
import { defineCommand, S, UserError } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetConversationStartersCommand = defineCommand<OpenApiClientServices>({
  name: "set-conversation-starters",
  description: "Set conversation starters.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    starters: S.Optional(S.Array(S.String(), { maxItems: 4 })),
    startersJson: S.Optional(S.String({ description: "JSON-encoded value for starters.", scope: ["cli"] })),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    if (params.starters !== undefined && params.startersJson !== undefined) {
      throw new UserError("Options \\"--starters\\" and \\"--starters-json\\" are mutually exclusive.");
    }
    let resolvedStarters = params.starters;
    if (params.startersJson !== undefined) {
      let parsedJson: unknown;
      try {
        parsedJson = JSON.parse(params.startersJson);
      } catch (error) {
        throw new UserError("Invalid value for \\"--starters-json\\". Expected valid JSON.");
      }
      if (!Array.isArray(parsedJson)) {
        throw new UserError("Invalid value for \\"--starters-json\\". Expected a JSON array.");
      }
      resolvedStarters = parsedJson;
    }
    if (resolvedStarters === undefined) {
      throw new UserError("Missing required parameter \\"starters\\".");
    }
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-conversation-starters",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "starters": resolvedStarters,
      },
    });
  },
});
",
    "path": "bots/set-conversation-starters.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetConversationStartersCommand } from "./bots/set-conversation-starters.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetConversationStartersCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > omits readOnly request-body fields from generated command params 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setProfile
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetProfileCommand = defineCommand<OpenApiClientServices>({
  name: "set-profile",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    displayName: S.String(),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-profile",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "displayName": params.displayName,
      },
    });
  },
});
",
    "path": "bots/set-profile.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetProfileCommand } from "./bots/set-profile.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetProfileCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > preserves integer enums in the emitted MCP schema 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setStatusCode
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetStatusCodeCommand = defineCommand<OpenApiClientServices>({
  name: "set-status-code",
  description: "Set a status code.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    statusCode: S.Enum([1,2] as const, { jsonType: "integer" }),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-status-code",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "statusCode": params.statusCode,
      },
    });
  },
});
",
    "path": "bots/set-status-code.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetStatusCodeCommand } from "./bots/set-status-code.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetStatusCodeCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > treats required body fields as optional when the request body is optional 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setDescription
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetDescriptionCommand = defineCommand<OpenApiClientServices>({
  name: "set-description",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    botHandle: S.String(),
    description: S.Optional(S.String()),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-description",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.botHandle,
      },
      ...(params.description === undefined
        ? {}
        : {
            body: {
              "description": params.description,
            },
          }),
    });
  },
});
",
    "path": "bots/set-description.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetDescriptionCommand } from "./bots/set-description.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetDescriptionCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > uses delete as the verb for delete-by-id operations 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: deleteBot
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsDeleteCommand = defineCommand<OpenApiClientServices>({
  name: "delete",
  description: "Delete a bot.",
  scope: ["cli", "mcp", "sdk"] as const,
  confirm: true,
  params: S.Object({
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it.", scope: ["cli", "sdk"] })),
    handle: S.String(),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v", scope: ["cli", "sdk"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{handle}",
      method: "DELETE",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "handle": params.handle,
      },
    });
  },
});
",
    "path": "bots/delete.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsDeleteCommand } from "./bots/delete.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsDeleteCommand],
});
",
    "path": "index.ts",
  },
]
`;
